@@ -3,6 +3,7 @@ Released: unreleased
 
 == Features ==
  * Fixed issue #3654: Allow to completely disable the turtle animation, added TortoiseGit advanced setting "DownloadAnimation"
+ * Update libgit to 2.29.1 based on Git for Windows sources
 
 = Release 2.11.0 =
 Released: 2020-10-10
